Tools/Convert_GL.h_and_GLext.h_C-Include/temp.h

/*
 * Datatypes
 */
typedef unsigned int	GLenum;
typedef unsigned char	GLboolean;
typedef unsigned int	GLbitfield;
typedef void		GLvoid;
typedef int		GLint;		/* 4-byte signed */
typedef unsigned char	GLubyte;	/* 1-byte unsigned */
typedef unsigned int	GLuint;		/* 4-byte unsigned */
typedef int		GLsizei;	/* 4-byte signed */
typedef float		GLfloat;	/* single precision float */
typedef float		GLclampf;	/* single precision float in [0,1] */
typedef double		GLdouble;	/* double precision float */
typedef double		GLclampd;	/* double precision float in [0,1] */
 void  glClearColor( GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha );
 void  glClear( GLbitfield mask );
 void  glColorMask( GLboolean red, GLboolean green, GLboolean blue, GLboolean alpha );
 void  glBlendFunc( GLenum sfactor, GLenum dfactor );
 void  glLogicOp( GLenum opcode );
 void  glCullFace( GLenum mode );
 void  glFrontFace( GLenum mode );
 void  glPointSize( GLfloat size );
 void  glLineWidth( GLfloat width );
 void  glPolygonMode( GLenum face, GLenum mode );
 void  glPolygonOffset( GLfloat factor, GLfloat units );
 void  glScissor( GLint x, GLint y, GLsizei width, GLsizei height);
 void  glDrawBuffer( GLenum mode );
 void  glReadBuffer( GLenum mode );
 void  glEnable( GLenum cap );
 void  glDisable( GLenum cap );
 GLboolean  glIsEnabled( GLenum cap );
 void  glGetBooleanv( GLenum pname, GLboolean *params );
 void  glGetDoublev( GLenum pname, GLdouble *params );
 void  glGetFloatv( GLenum pname, GLfloat *params );
 void  glGetIntegerv( GLenum pname, GLint *params );
 GLenum  glGetError( void );
 const GLubyte *  glGetString( GLenum name );
 void  glFinish( void );
 void  glFlush( void );
 void  glHint( GLenum target, GLenum mode );
/*
 * Depth Buffer
 */

 void  glClearDepth( GLclampd depth );
 void  glDepthFunc( GLenum func );
 void  glDepthMask( GLboolean flag );
 void  glDepthRange( GLclampd near_val, GLclampd far_val );
 void  glViewport( GLint x, GLint y,
                                    GLsizei width, GLsizei height );
 void  glDrawArrays( GLenum mode, GLint first, GLsizei count );
 void  glDrawElements( GLenum mode, GLsizei count,
                                      GLenum type, const GLvoid *indices );
 void  glPixelStoref( GLenum pname, GLfloat param );
 void  glPixelStorei( GLenum pname, GLint param );
 void  glReadPixels( GLint x, GLint y,
                                    GLsizei width, GLsizei height,
                                    GLenum format, GLenum type,
                                    GLvoid *pixels );
/*
 * Stenciling
 */

 void  glStencilFunc( GLenum func, GLint ref, GLuint mask );
 void  glStencilMask( GLuint mask );
 void  glStencilOp( GLenum fail, GLenum zfail, GLenum zpass );
 void  glClearStencil( GLint s );
 void  glTexParameterf( GLenum target, GLenum pname, GLfloat param );
 void  glTexParameteri( GLenum target, GLenum pname, GLint param );
 void  glTexParameterfv( GLenum target, GLenum pname,
                                          const GLfloat *params );
 void  glTexParameteriv( GLenum target, GLenum pname,
                                          const GLint *params );
 void  glGetTexParameterfv( GLenum target,
                                           GLenum pname, GLfloat *params);
 void  glGetTexParameteriv( GLenum target,
                                           GLenum pname, GLint *params );
 void  glGetTexLevelParameterfv( GLenum target, GLint level,
                                                GLenum pname, GLfloat *params );
 void  glGetTexLevelParameteriv( GLenum target, GLint level,
                                                GLenum pname, GLint *params );
 void  glTexImage1D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLint border,
                                    GLenum format, GLenum type,
                                    const GLvoid *pixels );
 void  glTexImage2D( GLenum target, GLint level,
                                    GLint internalFormat,
                                    GLsizei width, GLsizei height,
                                    GLint border, GLenum format, GLenum type,
                                    const GLvoid *pixels );
 void  glGetTexImage( GLenum target, GLint level,
                                     GLenum format, GLenum type,
                                     GLvoid *pixels );
/* 1.1 functions */

 void  glGenTextures( GLsizei n, GLuint *textures );
 void  glDeleteTextures( GLsizei n, const GLuint *textures);
 void  glBindTexture( GLenum target, GLuint texture );
 GLboolean  glIsTexture( GLuint texture );
 void  glTexSubImage1D( GLenum target, GLint level,
                                       GLint xoffset,
                                       GLsizei width, GLenum format,
                                       GLenum type, const GLvoid *pixels );
 void  glTexSubImage2D( GLenum target, GLint level,
                                       GLint xoffset, GLint yoffset,
                                       GLsizei width, GLsizei height,
                                       GLenum format, GLenum type,
                                       const GLvoid *pixels );
 void  glCopyTexImage1D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLint border );
 void  glCopyTexImage2D( GLenum target, GLint level,
                                        GLenum internalformat,
                                        GLint x, GLint y,
                                        GLsizei width, GLsizei height,
                                        GLint border );
 void  glCopyTexSubImage1D( GLenum target, GLint level,
                                           GLint xoffset, GLint x, GLint y,
                                           GLsizei width );
 void  glCopyTexSubImage2D( GLenum target, GLint level,
                                           GLint xoffset, GLint yoffset,
                                           GLint x, GLint y,
                                           GLsizei width, GLsizei height );